# experiment_journal

./: Dockerfile  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
app/api/dependencies/: auth.py
app/api/routes/: auth.py  experiment.py
app/core/: config.py  exceptions.py  security.py
app/db/: data.py  session.py
app/db/migrations/: env.py
app/db/migrations/versions/: 198b7bab8099_little_experiment_model_modification.py  2845491f3c83_add_user_to_experiment.py  5634d79d0c4f_add_user_to_experiment.py  9180fcd364f5_create_user_table.py  c4b66a2c054e_create_experiment_table.py  d85595370bd9_add_user_to_experiment.py
app/db/models/: __init__.py  experiment.py  user.py
app/repositories/: experiment_repository.py  user_repository.py
app/schemas/: experiment.py  user.py
app/services/: auth.py  experiment.py
tests/: conftest.py  test_api.py  test_auth.py  test_repository.py
